# HPE-for-Radar

./: .gitignore  pyproject.toml
codex/: analyze_severe_coverage.py
data2datasets/: dataset.py  dataset_for_detection.py  dataset_for_single.py  load_json.py  utils_data.py
metrics/: pose.py
models/P4Transformer/: P4Transformer.py  model_config.yaml  pointnet2_utils.py  transformer_helper.py
models/RPM2/: HRNet_helper.py  ROIAlign.py  RPM2.py  model_config.yaml  transformer_helper.py
models/utils/: profile_utils.py
notes/P4Transformer/: P4transformer.md
notes/RPM2/: RPM2.md
notes/点云路线记录/: record.md
preprocess/: gtprocess.py  lidarprocess.py  radarprocess.py  radarprocess_RPM2.py  realsenseprocess.py
run/: config.yaml  main.py
run/utils/: build_experiment.py  build_metric.py  build_model.py  checkpoint.py  get_cosine_schedule_with_warmup.py  load_config.py  model_init.py  plot_fig.py  process_one_epoch.py  set_device.py  set_seed.py  write_log.py
utils/: COCO.py
